Font size not showing up correctly in calender page - Fix

--- a/src/common.css
+++ b/src/common.css
@@ -93,6 +93,10 @@
     /*
      * BODY
      */
+    html {
+      font-size: 1rem;
+    }
+
     body {
         background: #28444c;
     }
